# munihac-2020-miso

./: README.md
code/0-view/web/: Main.hs
code/1-simple-events/: 1-simple-events.diff
code/1-simple-events/web/: Main.hs
code/2-forms/: 2-forms.diff
code/2-forms/web/: Main.hs
code/3-local-storage/: 3-local-storage.diff
code/3-local-storage/web/: Main.hs
code/4-requests/: 4-requests.diff  hie.yaml  miso-app.cabal
code/4-requests/server/: Main.hs
code/4-requests/web/: Main.hs
code/5-routing/: 5-routing.diff  miso-app.cabal
code/5-routing/web/: Main.hs
exercise/: README.md  miso-app.cabal
exercise/web/: Main.hs
flags/: miso-app.cabal  result
flags/web/: Main.hs
